--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/tejashree/anaconda3/envs/project/bin/python"
+    "python.pythonPath": "~/anaconda3/bin/python"
 }
