--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: release
-    - run: |
+      run: |
         if [[ "${GITHUB_REF:-}" == "refs/heads/master" ]]; then
           curl -v -X POST \
             -H "Content-Type: application/json" \
