--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,6 +18,6 @@ jobs:
         if [[ "${GITHUB_REF:-}" == "refs/heads/master" ]]; then
           curl -v -X POST \
             -H "Content-Type: application/json" \
-            --data "{\"tag_name\":\"$GITHUB_RUN_NUMBER\",\"name\":\"$GITHUB_RUN_NUMBER\" }" \
+            --data "{\"tag_name\":\"$GITHUB_RUN_NUMBER$GITHUB_RUN_ATTEMPT\",\"name\":\"$GITHUB_RUN_NUMBER$GITHUB_RUN_ATTEMPT\" }" \
             "https://Dheeraj2407:$GITHUB_TOKEN@api.github.com/repos/Dheeraj2407/Face-web/releases"
         fi
